--- a/Home.html
+++ b/Home.html
@@ -33,15 +33,15 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                              <a class="nav-link active text-light" aria-current="page" href="/Home.html">Home</a>
+                              <a class="nav-link active text-light" aria-current="page" href="Home.html">Home</a>
                             </li>
 
                             <li class="nav-item">
-                              <a class="nav-link text-light" href="/About.html">About</a>
+                              <a class="nav-link text-light" href="About.html">About</a>
                             </li>
 
                             <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle text-light" href="/ourResorts.html" role="button" 
+                              <a class="nav-link dropdown-toggle text-light" href="ourResorts.html" role="button" 
                                 data-bs-toggle="dropdown" aria-expanded="false"> Resorts </a>
                               <ul class="dropdown-menu bg-body-tertiary">
                                 <li><a class="dropdown-item" href="/topResorts.html">Top 12 Resorts </a></li>
@@ -54,7 +54,7 @@
                             </li>
                             
                             <li class="nav-item">
-                              <a class="nav-link activeNavLink text-light" href="/contact.html"> Contact </a>
+                              <a class="nav-link activeNavLink text-light" href="contact.html"> Contact </a>
                             </li>
                         </ul>
 
